--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-node_modules/**/*
 .expo/*
 npm-debug.*
 *.jks
@@ -9,3 +8,16 @@ npm-debug.*
 *.orig.*
 web-build/
 web-report/
+
+# Node
+node_modules
+*.log
+.nvm
+/bots/node_modules/
+package-lock.json
+
+# OS X
+.DS_Store
+
+# Watchman
+.watchmanconfig
